--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- here is where the second title of the title of next importance will display-->
       <h2>Joshua Dalton Website</h2>
       <!-- this can be updated to whatever image you would like to show-->
-    <img src="C:\Users\JDalt\Downloads\SnakeBite.jpg" alt="The Firefox logo: a flaming fox surrounding the Earth.">
+    <img src="C:images\SnakeBite.jpg" alt="The Firefox logo: a flaming fox surrounding the Earth.">
 
     <h3>Welcome!</h3>
 
