added meta tags
added meta tags should give clears for cache.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- below is the first title of the page. this is overriden if .js has const-->
     <h1><i>Joshua Dalton Website</i></h1>
     <!-- here is where the second title of the title of next importance will display-->
-      <h2>Joshua Dalton Website b</h2>
+      <h2>Joshua Dalton Website bx</h2>
       <!-- this can be updated to whatever image you would like to show-->
     <img src="images\SnakeBite.jpg" alt="The Firefox logo: a flaming fox surrounding the Earth.">
 
